# kEIPM

./: .gitignore  .gitmodules  CMakeLists.txt  Kbuild  Makefile  main.c  modules.order  out
builtin/: Makefile  bin2c  bin2c.c  builtin.c  builtin.h  ca.der  ca.der.key  ca.h  client.der  client.h  private_pkcs1.h  private_pkcs1.pem  public_pkcs1.h  public_pkcs1.pem
cert/: LICENSE  asn1-oid.c  asn1-parser.c  asn1-types.c  base64.c  cert-validator.c  pem-parser.c  x509-name.c  x509-path.c  x509-pubkey.c  x509.c
crypto/: pkcs1.c  rsa.c  sha256.c
data/: Makefile  bin2c  bin2c.c  ca.crt  ca.der  ca.h  client.crt  client.h
dso/: bignum.c  bignum.h  cli_main.c  keys.h  rsa.c
elf/: elf-op.c  elf-parser.c  elf-writer.c
include/: base64.h  cert-validator.h  elf-op.h  elf.h  errors.h  keipm.h  pem-parser.h  pkcs1.h  rsa.h  sha.h  signature.h  string.h  utils.h  validator.h  watcher.h
include/asn1-parser/: asn1.h  dsl.h  types.h  x509.h
include/asn1-parser/internal/: x509.h
include/user/: rsa.h
tools/: CMakeLists.txt  api.h  deploy.sh  elf-reader.c  elf.h  elfop.c  elfop.h  errors.h  gen_cert.c  gen_rsa_key.c  keipm.conf  keipm_cli.c  sign_elf.c  sigtool.c
tools/build-kEIPM-Desktop_Qt_5_9_9_GCC_64bit-Debug/: Makefile  ca.der  ca.der.key  kEIPM  moc_finish_close.cpp  moc_predefs.h  moc_widget.cpp  private_pkcs1.pem  public_pkcs1.pem  ui_finish_close.h  ui_widget.h  user.der  user.der.key
utils/: fs.c  reader.c  string.c
validator/: validator.c
watcher/: ksyms.c  ksyms.h  validator.c  validator.h  watcher-lsm.c  watcher-lsm.h  watcher.c
